buildpacks/nodejs/tests/snapshots/node_24.snap
---
source: crates/test_support/src/lib.rs
---
## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `>=24.0.0 <25.0.0-0`
  - Resolved Node.js version: `24.1.0`
- Installing Node.js distribution
  - Downloading Node.js `24.1.0 (<arch>)` from https://nodejs.org/download/release/v24.1.0/node-v24.1.0-<arch>.tar.gz ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `24.1.0 (<arch>)`
  - Installing Node.js `24.1.0 (<arch>)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)
